add apollon version

--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -76,17 +76,18 @@ configuration conf {
 	include exacto.commander.data_storage_options(exactolinkbuffersz = 512,use_extended_fun=false)
 	include exacto.commander.data_storage_apollon
 	@Runlevel(2) include exacto.spi.mliner_apollon
-	@Runlevel(2) include exacto.spi.sns_apollon
+	//@Runlevel(2) include exacto.spi.sns_apollon
 	@Runlevel(2) include exacto.apollon.tim.tim3
 	
-	@Runlevel(2) include exacto.cmds.sensor.sns_service
-	@Runlevel(2) include exacto.apollon.gpio.gpio_spi
+	//@Runlevel(2) include exacto.cmds.sensor.sns_service
+	//@Runlevel(2) include exacto.apollon.gpio.gpio_spi
 
 	//include exacto.cmds.perf_tests.ex_tim_q
 	//include exacto.cmds.perf_tests.ex_tim
 	//include exacto.cmds.perf_tests.ex_sensor
 	//include exacto.cmds.perf_tests.ex_sns_sender_smpl
 	//include exacto.cmds.perf_tests.ex_sns_sender_bs
-	include exacto.cmds.mliner.ex_spi_mline_apollon
+	//include exacto.cmds.mliner.ex_spi_mline_apollon
 	include exacto.hardtools.basic_apollon
+	include exacto.cmds.tests.mliner.sec_getter
 }
