--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -136,7 +136,7 @@ configuration conf {
 	//include exacto.cmds.mliner.disable_spi_master
 	//include exacto.cmds.mliner.enable_spi_master
 	// @Runlevel(2) include exacto.afina.gpio.gpio_spi
-	include exacto.commander.buffer(buffersz = 8192)
+//	include exacto.commander.buffer(buffersz = 8192)
 	//include exacto.commander.data_storage(exactolinkbuffersz = 512)
 
 	//include exacto.exactolink.basis_code
@@ -145,5 +145,29 @@ configuration conf {
 	//include exacto.cmds.mliner.ex_spi_mline_afina
 	//include exacto.hardtools.basic_afina
 	
+
+
+	include exacto.gpio.afina.basis.config
+	include exacto.hardtools.basic_afina
+
+	@Runlevel(3)	include exacto.spi.mline_main
+	@Runlevel(3)	include exacto.afina.tim.tim3
+//	@Runlevel(3)	include exacto.mliner.main_mod_afina
+//	@Runlevel(3)	include exacto.cmds.tests.print.smpl_mod
+
+	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
+	include exacto.commander.data_storage_options(exactolinkbuffersz = 512,use_extended_fun=false)
+	include exacto.commander.data_storage_afina
+
+//	include exacto.cmds.mliner.test_read_afina
+//	include exacto.cmds.mliner.test_cmd_afina
+//	include exacto.cmds.mliner.start_mliner_afina
+//	include exacto.cmds.mliner.stop_mliner_afina
+	include exacto.cmds.tests.print.start
+	include exacto.cmds.tests.print.check
+	include exacto.cmds.tests.mliner.main_sender
 	include exacto.cmds.tests.buffer_fifo_test
+
+
+
 }
