add timer to apollon

--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -77,7 +77,7 @@ configuration conf {
 	include exacto.commander.data_storage_apollon
 	@Runlevel(2) include exacto.spi.mliner_apollon
 	//@Runlevel(2) include exacto.spi.sns_apollon
-	@Runlevel(2) include exacto.apollon.tim.tim3
+	@Runlevel(2) include exacto.apollon.tim.tim_3
 	
 	//@Runlevel(2) include exacto.cmds.sensor.sns_service
 	//@Runlevel(2) include exacto.apollon.gpio.gpio_spi
