add cmd for tests

--- a/platform/exacto/templates/apollon/apollon_001/mods.conf
+++ b/platform/exacto/templates/apollon/apollon_001/mods.conf
@@ -81,5 +81,5 @@ configuration conf {
 	@Runlevel(2) include exacto.sensors.lsmism
 	
 	include exacto.cmds.tests.mliner.sec_module
-
+	include exacto.cmds.sensor.lsmism.reader
 }
