--- a/platform/exacto/templates/apollon/apollon_001/mods.conf
+++ b/platform/exacto/templates/apollon/apollon_001/mods.conf
@@ -80,6 +80,9 @@ configuration conf {
 
 	@Runlevel(2) include exacto.sensors.lsmism
 	
-	include exacto.cmds.tests.mliner.sec_module
+	//include exacto.cmds.tests.mliner.sec_module
 	include exacto.cmds.sensor.lsmism.reader
+
+	include exacto.mliner.mod_sec
+	include exacto.cmds.tests.mliner.sec_module_xmpl
 }
