rework afina mline

--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -150,7 +150,15 @@ configuration conf {
 	include exacto.gpio.afina.basis.config
 	include exacto.hardtools.basic_afina
 
-	@Runlevel(3)	include exacto.spi.mline_main
+//old impl
+//	@Runlevel(3)	include exacto.spi.mline_main
+//	include exacto.cmds.tests.mliner.main_sender
+//new version
+	include exacto.spi.mline_sec_impl_afina
+	include exacto.spi.mline_main2
+	include exacto.mliner.mod_base
+	include exacto.cmds.tests.mliner.main_module_xmpl
+//==========
 	@Runlevel(3)	include exacto.afina.tim.tim3
 //	@Runlevel(3)	include exacto.mliner.main_mod_afina
 //	@Runlevel(3)	include exacto.cmds.tests.print.smpl_mod
@@ -165,7 +173,6 @@ configuration conf {
 //	include exacto.cmds.mliner.stop_mliner_afina
 	include exacto.cmds.tests.print.start
 	include exacto.cmds.tests.print.check
-	include exacto.cmds.tests.mliner.main_sender
 	include exacto.cmds.tests.buffer_fifo_test
 
 
