--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -174,6 +174,7 @@ configuration conf {
 	include exacto.cmds.tests.print.start
 	include exacto.cmds.tests.print.check
 	include exacto.cmds.tests.buffer_fifo_test
+	include exacto.cmds.tests.array.copy
 
 
 
