--- a/platform/exacto/templates/afina/usb/mods.conf
+++ b/platform/exacto/templates/afina/usb/mods.conf
@@ -8,6 +8,11 @@ configuration conf {
 	include platform.exacto.afina.basis.arch
 
 	@Runlevel(0) include third_party.bsp.stmf7cube.sdram(fmc_swap=true)
+	@Runlevel(0) include embox.arch.arm.armmlib.armv7m_cpu_cache(
+		log_level=4,
+		sram_nocache_section_size=0x4000,
+		nocache_region0_addr=0x60000000, nocache_region0_size=0x00100000
+	)
 	include embox.arch.arm.vfork
 
 	@Runlevel(0) include embox.kernel.stack(stack_size=8192,alignment=4)
@@ -28,7 +33,7 @@ configuration conf {
 	@Runlevel(1) include embox.driver.serial.stm_usart_f7(baud_rate=115200, usartx=1)
 	@Runlevel(1) include embox.driver.diag(impl="embox__driver__serial__stm_usart_f7")
 	@Runlevel(1) include embox.driver.serial.stm_ttyS0(baud_rate=115200, usartx=1)
-	@Runlevel(2) include embox.driver.sd.stm32f746g_discovery_sd
+	@Runlevel(2) include embox.driver.sd.stm32f746g_discovery_sd(use_local_buf = true)
 
 
 	include embox.driver.flash.stm32f7cube(flash_size=0x18000)
@@ -37,6 +42,7 @@ configuration conf {
 
 	@Runlevel(2) include embox.test.kernel.thread.thread_test
 	@Runlevel(2) include embox.test.math.math_test
+	@Runlevel(2) include embox.test.mem.heap
 
 	include embox.kernel.task.multi
 	include embox.kernel.task.resource.idesc_table(idesc_table_size=32)
@@ -51,12 +57,12 @@ configuration conf {
 	include embox.kernel.sched.idle_light
 
 	include embox.kernel.lthread.lthread
-	include embox.kernel.thread.core(thread_pool_size=16, thread_stack_size=8192)
+	include embox.kernel.thread.core(thread_pool_size=16, thread_stack_size=5000)
 
 	/* tty requires */
 	include embox.kernel.thread.mutex
-	include embox.driver.tty.tty(rx_buff_sz=32, io_buff_sz=32)
-	include embox.driver.tty.task_breaking_disable
+	include embox.driver.tty.tty(rx_buff_sz=16, io_buff_sz=16)
+	//include embox.driver.tty.task_breaking_disable
 
 	@Runlevel(2) include embox.cmd.msleep
 	@Runlevel(2) include embox.cmd.sh.tish(builtin_commands = "export exit logout httpd")
@@ -115,21 +121,13 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-	//@Runlevel(3) include exacto.afina.spi.spi1master
-	@Runlevel(3) include exacto.spi.mliner_afina
-	//include exacto.cmds.tests.spi_dma_transmit_receive
-	//include exacto.cmds.tests.spi_dma_receive_transmit
-	//include exacto.cmds.tests.spi_dma_one_txrx
-	include exacto.cmds.tests.print_to_sd
-	@Runlevel(3) include exacto.afina.tim.tim3
-	include exacto.cmds.tests.tim_printer
-	include exacto.cmds.tests.spi_dma_tim_based
-	include exacto.cmds.tests.lights
-	include exacto.afina.blink.basic
-	//include exacto.cmds.sensor.storage_run
-	//include exacto.cmds.mliner.disable_spi_master
-	//include exacto.cmds.mliner.enable_spi_master
-	@Runlevel(2) include exacto.afina.gpio.gpio_spi
 
-	// include exacto.commander.filemanager
+
+
+	include exacto.gpio.afina.basis.config
+	include exacto.hardtools.basic_afina
+
+
+	include exacto.usb.base
+
 }
