--- a/platform/exacto/templates/afina/usb/mods.conf
+++ b/platform/exacto/templates/afina/usb/mods.conf
@@ -128,6 +128,6 @@ configuration conf {
 	include exacto.hardtools.basic_afina
 
 
-	include exacto.usb.base
+	@Runlevel(2) include exacto.usb.base
 
 }
