--- a/platform/exacto/templates/afina/usb/mods.conf
+++ b/platform/exacto/templates/afina/usb/mods.conf
@@ -128,8 +128,8 @@ configuration conf {
 	include exacto.hardtools.basic_afina
 
 
-	@Runlevel(2) include exacto.usb.base
+	@Runlevel(3) include exacto.usb.base
 
 
-	include exacto.cmds.tests.usb
+	include exacto.cmds.tests.usb.sender
 }
