try to cr storage

--- a/platform/exacto/templates/afina/ms/mods.conf
+++ b/platform/exacto/templates/afina/ms/mods.conf
@@ -127,13 +127,8 @@ configuration conf {
 	include exacto.gpio.afina.basis.config
 	include exacto.hardtools.basic_afina
 
-	@Runlevel(1) include embox.driver.usb.core(usb_max_hcd=1, usb_max_dev=2, usb_max_hub=1,
-					usb_max_req=4, urb_alignment=4)
-	@Runlevel(1) include embox.driver.usb.class.mass_storage
-	@Runlevel(1) include embox.driver.usb.class.ccid(log_level=4)
-	@Runlevel(1) include embox.driver.usb.class.hid
-	@Runlevel(1) include embox.driver.usb.hub
-	@Runlevel(2) include embox.driver.usb.stm32_hc.stm32f7_hc(log_level=4)
+
+	@Runlevel(2) include exacto.usb.stm32f746.msc.base
 
 
 }
