--- a/platform/exacto/templates/afina/ms/mods.conf
+++ b/platform/exacto/templates/afina/ms/mods.conf
@@ -112,7 +112,7 @@ configuration conf {
 	include embox.fs.driver.initfs_dvfs
 	include embox.fs.driver.devfs_dvfs
 	include embox.fs.rootfs_dvfs(fstype="initfs")
-	@Runlevel(2) include embox.fs.driver.fat_dvfs
+	// @Runlevel(2) include embox.fs.driver.fat_dvfs
 
 	include embox.driver.char_dev
 
