retarget buffer on external source

--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -163,7 +163,7 @@ configuration conf {
 //	@Runlevel(3)	include exacto.mliner.main_mod_afina
 //	@Runlevel(3)	include exacto.cmds.tests.print.smpl_mod
 
-	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
+	// include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
 	include exacto.commander.data_storage_options(exactolinkbuffersz = 512,use_extended_fun=false)
 	include exacto.commander.data_storage_afina
 
@@ -176,6 +176,6 @@ configuration conf {
 	include exacto.cmds.tests.buffer_fifo_test
 	include exacto.cmds.tests.array.copy
 
-
+	include ext.exacto.operator.buffer(buffersz = 2048, extbuffersz = 16384)
 
 }
