success build afina

--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -150,15 +150,22 @@ configuration conf {
 	include exacto.gpio.afina.basis.config
 	include exacto.hardtools.basic_afina
 
-//old impl
+//old impl =====================
 //	@Runlevel(3)	include exacto.spi.mline_main
 //	include exacto.cmds.tests.mliner.main_sender
-//new version
-	include exacto.spi.mline_sec_impl_afina
-	include exacto.spi.mline_main2
-	include exacto.mliner.mod_base
-	include exacto.cmds.tests.mliner.main_module_xmpl
-//==========
+//new version ==================
+	// include exacto.spi.mline_sec_impl_afina
+	// include exacto.spi.mline_main2
+	// include exacto.mliner.mod_base
+	// include exacto.cmds.tests.mliner.main_module_xmpl
+
+// ext impl ====================
+
+	include ext.exacto.mliner.main
+	include exacto.mliner.maindev_base
+	include exacto.spi.maindev_impl_afina
+	include ext.exacto.operator.buffer(buffersz = 2048, extbuffersz = 16384)
+//==============================
 	@Runlevel(3)	include exacto.afina.tim.tim3
 //	@Runlevel(3)	include exacto.mliner.main_mod_afina
 //	@Runlevel(3)	include exacto.cmds.tests.print.smpl_mod
@@ -176,6 +183,5 @@ configuration conf {
 	include exacto.cmds.tests.buffer_fifo_test
 	include exacto.cmds.tests.array.copy
 
-	include ext.exacto.operator.buffer(buffersz = 2048, extbuffersz = 16384)
 
 }
