fix apollon mliner

--- a/platform/exacto/templates/apollon/apollon_001/mods.conf
+++ b/platform/exacto/templates/apollon/apollon_001/mods.conf
@@ -72,17 +72,27 @@ configuration conf {
 	include embox.compat.libc.stdio.print(support_floating=0)
 //	include embox.compat.posix.util.time
 	
-	include exacto.commander.buffer(buffersz = 1024, extbuffersz = 128)
-	include exacto.spi.mline_sec_impl_apollon
+	include ext.exacto.operator.buffer(buffersz = 1024, extbuffersz = 128)
+	// include exacto.commander.buffer(buffersz = 1024, extbuffersz = 128)
+	
+	// old impl ==================================
+	// include exacto.spi.mline_sec_impl_apollon
+	// @Runlevel(2) include exacto.spi.mline_sec
+	// include exacto.mliner.mod_sec
+	// ext impl =================================
+	include ext.exacto.mliner.sec
+	include exacto.mliner.secdev_base
+	include exacto.spi.secdev_impl_apollon
+
 	include exacto.apollon.gpio.mline_spi_sec
-	@Runlevel(2) include exacto.spi.mline_sec
+
 	@Runlevel(2) include exacto.apollon.tim.tim_3
 
 	@Runlevel(2) include exacto.sensors.lsmism
 	
 	//include exacto.cmds.tests.mliner.sec_module
 	include exacto.cmds.sensor.lsmism.reader
+	include embox.compat.posix.util.sleep
 
-	include exacto.mliner.mod_sec
 	include exacto.cmds.tests.mliner.sec_module_xmpl
 }
