--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -157,7 +157,7 @@ configuration conf {
 	// include exacto.spi.mline_sec_impl_afina
 	// include exacto.spi.mline_main2
 	// include exacto.mliner.mod_base
-	// include exacto.cmds.tests.mliner.main_module_xmpl
+	include exacto.cmds.tests.mliner.main_module_xmpl
 
 // ext impl ====================
 
