rework spi mliner main

--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -162,17 +162,19 @@ configuration conf {
 // ext impl ====================
 
 	include ext.exacto.mliner.main
-	include exacto.mliner.maindev_base
-	include exacto.spi.maindev_impl_afina
-	include ext.exacto.operator.buffer(buffersz = 2048, extbuffersz = 16384)
+	include ext.exacto.mliner.maindev_base
+	// include exacto.mliner.maindev_base
+	// include exacto.spi.maindev_impl_afina
+	include exacto.spi.mliner_impl_maindev
+	include ext.exacto.operator.buffer(buffersz = 1024, extbuffersz = 16384)
 //==============================
 	@Runlevel(3)	include exacto.afina.tim.tim3
 //	@Runlevel(3)	include exacto.mliner.main_mod_afina
 //	@Runlevel(3)	include exacto.cmds.tests.print.smpl_mod
 
 	// include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
-	include exacto.commander.data_storage_options(exactolinkbuffersz = 512,use_extended_fun=false)
-	include exacto.commander.data_storage_afina
+	// include exacto.commander.data_storage_options(exactolinkbuffersz = 512,use_extended_fun=false)
+	// include exacto.commander.data_storage_afina
 
 //	include exacto.cmds.mliner.test_read_afina
 //	include exacto.cmds.mliner.test_cmd_afina
