--- a/platform/exacto/templates/apollon/apollon_001/mods.conf
+++ b/platform/exacto/templates/apollon/apollon_001/mods.conf
@@ -80,9 +80,12 @@ configuration conf {
 	// @Runlevel(2) include exacto.spi.mline_sec
 	// include exacto.mliner.mod_sec
 	// ext impl =================================
-	include ext.exacto.mliner.sec
-	include exacto.mliner.secdev_base
-	include exacto.spi.secdev_impl_apollon
+	// include ext.exacto.mliner.sec
+	// include exacto.mliner.secdev_base
+	include ext.exacto.mliner.main
+	include ext.exacto.mliner.maindev_base
+	include exacto.spi.mliner_impl_secdev
+	// include exacto.spi.secdev_impl_apollon
 
 	include exacto.apollon.gpio.mline_spi_sec
 
