--- a/platform/exacto/templates/afina/basis/build.conf
+++ b/platform/exacto/templates/afina/basis/build.conf
@@ -6,15 +6,22 @@ ARCH = arm
 
 CROSS_COMPILE = arm-none-eabi-
 
-CFLAGS += -O0 -g
+CFLAGS += -Os -g
+CXXFLAGS += -Os -g
 CFLAGS += -mthumb -mlittle-endian
 CFLAGS += -ffreestanding
 
 /* FIXME: It's right: CFLAGS += -mtune=cortex-m7 -march=armv7-m */
 CFLAGS += -mcpu=cortex-m7
+CXXFLAGS += -mthumb -mlittle-endian -mcpu=cortex-m7 -ffreestanding -fomit-frame-pointer
 
 /* Switch between FPU and non-FPU modes */
 /* CFLAGS += -msoft-float */
 CFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard
+CXXFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard
+CXXFLAGS += -D__STDCPP_WANT_MATH_SPEC_FUNCS__=0 -DBT_THREADSAFE=0
 
+CXXFLAGS += -fno-rtti
+CXXFLAGS += -fno-exceptions
+CXXFLAGS += -fno-threadsafe-statics
 
