--- a/platform/exacto/templates/afina/basis/mods.conf
+++ b/platform/exacto/templates/afina/basis/mods.conf
@@ -121,6 +121,35 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-	include ext.bullet.core
+	// include embox.lib.cxx.libsupcxx_standalone
+	// include third_party.lib.libstdcxx_toolchain 
+	// include third_party.lib.libgcc_toolchain
+	// include embox.compat.atomic.pseudo_atomic
+	// include embox.compat.libc.math_openlibm
+	// include third_party.gcc.libstdcxx
+	// include third_party.gcc.libsupcxx
+	include embox.compat.libc.math_openlibm
+	include embox.compat.posix.util.gettimeofday
+	include embox.compat.posix.pthread_key
 
+	// include third_party.gcc.libsupcxx
+	// include third_party.gcc.libstdcxx
+	
+	@Runlevel (2) include embox.lib.cxx.ConstructionGlobal
+	include embox.lib.cxx.DestructionStatic(table_size=8)
+	
+	include third_party.gcc.libgcc
+	include embox.lib.cxx.libsupcxx_standalone
+	include third_party.lib.libstdcxx_toolchain
+
+// 	include third_party.lib.libgcc_toolchain
+//   include embox.compat.atomic.pseudo_atomic
+//   include embox.compat.libc.math_openlibm
+//   include third_party.gcc.libstdcxx
+//   include third_party.gcc.libsupcxx
+
+
+	include ext.bullet.core
+	include exacto.cmds.tests.bullet.hello_world
+	include exacto.cmds.tests.bullet.assert
 }
