--- a/platform/exacto/templates/afina/usb/mods.conf
+++ b/platform/exacto/templates/afina/usb/mods.conf
@@ -130,6 +130,9 @@ configuration conf {
 
 	@Runlevel(3) include exacto.usb.base
 
+	include ext.exacto.mliner.main
+	include ext.exacto.mliner.maindev_base
+	include ext.exacto.operator.buffer(buffersz = 1024, extbuffersz = 16384)
 
 	include exacto.cmds.tests.usb.sender
 }
