--- a/platform/exacto/templates/afina/basis/build.conf
+++ b/platform/exacto/templates/afina/basis/build.conf
@@ -22,6 +22,6 @@ CXXFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard
 CXXFLAGS += -D__STDCPP_WANT_MATH_SPEC_FUNCS__=0 -DBT_THREADSAFE=0
 
 CXXFLAGS += -fno-rtti
-CXXFLAGS += -fno-exceptions
+// CXXFLAGS += -fno-exceptions
 CXXFLAGS += -fno-threadsafe-statics
 
