--- a/platform/exacto/templates/afina/basis/mods.conf
+++ b/platform/exacto/templates/afina/basis/mods.conf
@@ -49,7 +49,7 @@ configuration conf {
 	include embox.kernel.task.resource.sig_table(sig_table_size=20)
 	include embox.kernel.task.resource.env(env_per_task=4,env_str_len=64)
 
-	include embox.kernel.thread.thread_local_none
+	// include embox.kernel.thread.thread_local_none
 	include embox.kernel.thread.thread_cancel_disable
 	include embox.kernel.thread.signal.siginfoq(siginfo_pool_sz=8)
 	include embox.kernel.timer.sleep
@@ -121,32 +121,32 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-	// include embox.lib.cxx.libsupcxx_standalone
-	// include third_party.lib.libstdcxx_toolchain 
-	// include third_party.lib.libgcc_toolchain
-	// include embox.compat.atomic.pseudo_atomic
-	// include embox.compat.libc.math_openlibm
-	// include third_party.gcc.libstdcxx
-	// include third_party.gcc.libsupcxx
 	include embox.compat.libc.math_openlibm
 	include embox.compat.posix.util.gettimeofday
 	include embox.compat.posix.pthread_key
+	include embox.compat.atomic.pseudo_atomic
 
-	// include third_party.gcc.libsupcxx
-	// include third_party.gcc.libstdcxx
 	
 	@Runlevel (2) include embox.lib.cxx.ConstructionGlobal
 	include embox.lib.cxx.DestructionStatic(table_size=8)
+//================================================================	
+	// include third_party.gcc.libgcc
+	// include embox.lib.cxx.libsupcxx_standalone
+	// include third_party.lib.libstdcxx_toolchain
+//================================================================	
 	
 	include third_party.gcc.libgcc
-	include embox.lib.cxx.libsupcxx_standalone
+	@Runlevel(2) include embox.test.cxx.memory_test
+	@Runlevel(2) include embox.test.cxx.inheritance_test
+	@Runlevel(2) include embox.test.cxx.exception_test
+	
+	include third_party.lib.libgcc_toolchain
+	include third_party.lib.libsupcxx_toolchain
 	include third_party.lib.libstdcxx_toolchain
+	@Runlevel(0) include third_party.lib.newlib_compat.reent
 
-// 	include third_party.lib.libgcc_toolchain
-//   include embox.compat.atomic.pseudo_atomic
-//   include embox.compat.libc.math_openlibm
-//   include third_party.gcc.libstdcxx
-//   include third_party.gcc.libsupcxx
+//================================================================	
+
 
 
 	include ext.bullet.core
