--- a/platform/exacto/templates/afina/basis/mods.conf
+++ b/platform/exacto/templates/afina/basis/mods.conf
@@ -14,6 +14,7 @@ configuration conf {
 		nocache_region0_addr=0x60000000, nocache_region0_size=0x00100000
 	)
 	include embox.arch.arm.vfork
+	include embox.arch.arm.cxxabi
 
 	@Runlevel(0) include embox.kernel.stack(stack_size=8192,alignment=4)
 
