add test more fun

--- a/platform/exacto/templates/afina/basis/build.conf
+++ b/platform/exacto/templates/afina/basis/build.conf
@@ -25,3 +25,5 @@ CXXFLAGS += -fno-rtti
 // CXXFLAGS += -fno-exceptions
 CXXFLAGS += -fno-threadsafe-statics
 
+CXXFLAGS += -Wno-unused-variable -Wno-unused-but-set-variable
+
