--- a/platform/exacto/templates/afina/basis/build.conf
+++ b/platform/exacto/templates/afina/basis/build.conf
@@ -20,6 +20,7 @@ CXXFLAGS += -mthumb -mlittle-endian -mcpu=cortex-m7 -ffreestanding -fomit-frame-
 CFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard
 CXXFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard
 CXXFLAGS += -D__STDCPP_WANT_MATH_SPEC_FUNCS__=1 -DBT_THREADSAFE=1
+CXXFLAGS += -DBT_DEBUG
 
 CXXFLAGS += -fno-rtti
 // CXXFLAGS += -fno-exceptions
